# src/storage/api-docs/api-docs.json
@@ -13,28 +13,6 @@
                 "summary": "Login",
                 "description": "Login",
                 "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "Correo electronico",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "matias@gmail.com"
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "Contrasenia",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "123456"
-                    }
-                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
